--- a/style.css
+++ b/style.css
@@ -9,9 +9,15 @@ body {
 }
 
 nav {
-  background-color: #111;
+  background-color: rgb(14, 13, 13);
   color: white;
-  padding: 20px 50px;
+  padding: 10px 50px;
+}
+
+.navItem {
+  background-color: rgb(14, 13, 13);
+  color: white;
+  padding: 10px 50px;
 }
 
 .navTop {
