--- a/style.css
+++ b/style.css
@@ -9,8 +9,8 @@ body {
 }
 
 nav {
-  background-color: rgb(14, 13, 13);
-  color: white;
+  background-color: rgb(0, 0, 0);
+  color: rgb(255, 255, 255);
   padding: 10px 50px;
 }
 
@@ -58,7 +58,7 @@ nav {
 }
 
 .slider {
-  background: url("https://images.unsplash.com/photo-1604147495798-57beb5d6af73?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2370&q=80");
+  background: url("https://cdn3.f-cdn.com/contestentries/694233/7320265/57af52582c656_thumb900.jpg");
   clip-path: polygon(0 0, 100% 0, 100% 100%, 0 85%);
   overflow: hidden;
 }
